@@ -67,6 +67,12 @@ vAck:in-memory-library
   after the initial processing by GDB such as loading symbols and placing
   breakpoints.
 
+U stop reply
+
+  Indicates that threads are currently unavailable.  We tried stopping them but
+  they did not respond.  The remote stub reports support for this stop reply to
+  GDB's qSupported query.
+
 *** Changes in GDB 14
 
 * GDB now supports the AArch64 Scalable Matrix Extension 2 (SME2), which
